--- a/boards/templates/boards/edit_entry.html
+++ b/boards/templates/boards/edit_entry.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
-        <button class="btn btn-primary">Add entry</button>
+        <button class="btn btn-primary">Save entry</button>
     {% endbuttons %}
 </form>
 
