--- a/boards/templates/boards/base.html
+++ b/boards/templates/boards/base.html
@@ -2,63 +2,51 @@
 
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width" , initial-scale=1>
+        <title>Journal</title>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width" , initial-scale=1>
-    <title>Journal</title>
-
-    {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light mb-3 border">
-        <div class="d-flex navbar-expand">
-            <ul class="navbar-nav mr-auto">
+        {% bootstrap_css %}
+        {% bootstrap_javascript jquery='full' %}
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-md navbar-light bg-light mb-3 border">
+            <ul class="navbar-nav navbar-expand">
                 <li class="nav-item">
                     <a class="navbar-brand" href="{% url 'boards:index' %}">Journal</a>
                 </li>
-            </ul>
-            <ul class="navbar-nav" style="margin-left: auto;">
-                {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'boards:topics' %}">Topics</a>
                 </li>
-                {% endif %}
             </ul>
-        </div>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarTop">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTop">
+                <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <span class="nav-link disabled">Hello, {{ user.username }}</span>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'users:login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'users:register' %}">Register</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
 
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarTop">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTop">
-            {% if user.is_authenticated %}
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <span class="nav-link disabled">Hello, {{ user.username }}</span>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:login' %}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:register' %}">Register</a>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-    <main class="container">
-        <div class="mb-3">{% block page_header %}{% endblock page_header %}</div>
-        <div>{% block content %}{% endblock content %}</div>
-    </main>
-</body>
-
+        <main class="container">
+            <div class="mb-3">{% block page_header %}{% endblock page_header %}</div>
+            <div>{% block content %}{% endblock content %}</div>
+        </main>
+    </body>
 </html>
