--- a/boards/templates/boards/topics.html
+++ b/boards/templates/boards/topics.html
@@ -4,7 +4,7 @@
 {% block page_header %}
 
 <div class="d-flex justify-content-between align-items-center">
-    <h3>Your topics</h3>
+    <h3 style="margin-bottom: 0;">Your topics</h3>
     <a href="{% url 'boards:new_topic' %}">{% bs_icon 'journal-plus' size='2em' %}</a>
 </div>
 
@@ -15,11 +15,11 @@
 {% for topic_content in topic_contents %}
     <div class="list-group">
         <div class="list-group-item d-flex align-items-center">
-            <h5 class="text-muted">
+            <h5 style="margin-bottom: 0;">
                 <a href="{% url 'boards:topic' topic_content.id %}">{{ topic_content }}</a>
             </h5>
             <span class="ml-auto badge badge-pill badge-primary">{{ topic_content.number_of_entries }}</span>
-            <a class="ml-3 text-secondary" href="{% url 'boards:delete_topic' topic_content.id %}">{% bs_icon 'trash' size='1.5em' %}</a>
+            <a class="ml-2 text-secondary" href="{% url 'boards:delete_topic' topic_content.id %}">{% bs_icon 'trash' size='1.5em' %}</a>
         </div>
     </div>
 {% empty %}
