--- a/boards/templates/boards/topic.html
+++ b/boards/templates/boards/topic.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 {% empty %}
-    <p class="lead border-top pt-2">No entries have been added yet.</p>
+    <p class="lead border-top pt-2">No entry has been added yet.</p>
 {% endfor %}
 
 {% endblock content %}
